# Integrated-Artificial-Intelligence-Framework-for-Autonomous-Mobile-Manipulation

./: .gitignore  LICENSE  README.md  readme.md  robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml  robotyaml2.txt
manipulators/config/: moveit.yaml
maps/: map1.pgm  map1.yaml
platform/config/: control.yaml  twist_mux.yaml
platform/launch/: platform-service.launch.py
scripts/: build.sh  install_rosdeps.sh  run_demo.sh
sensors/config/: lidar2d_0.yaml
sensors/launch/: camera_0.launch.py  lidar2d_0.launch.py  sensors-service.launch.py
src/clearpath_common/clearpath_manipulators/config/: world_joint.srdf
src/clearpath_common/clearpath_manipulators/launch/: moveit.launch.py  moveit_launch_original.txt
src/clearpath_nav2_demos/: CMakeLists.txt
src/clearpath_nav2_demos/config/j100/: nav2.yaml  nav2_original.txt
src/clearpath_simulator/clearpath_gz/worlds/: warehouse.sdf  world_demo.sdf
src/jackal_bringup/: package.xml  setup.cfg  setup.py
src/jackal_bringup/jackal_bringup/: add_scene_objects.py  initial_pose_pub.py  inject_virtual_joint.py  pose_init_once.py
src/jackal_bringup/launch/: jackal_sim.launch.py
src/jackal_perception/: package.xml  setup.cfg  setup.py
src/jackal_perception/jackal_perception/: detect_object_server.py
src/jackal_perception/jackal_perception/params/: perception.yaml
src/jackal_perception/launch/: perception.launch.py
src/jackal_perception_interfaces/: CMakeLists.txt  package.xml
src/jackal_perception_interfaces/action/: DetectObject.action
src/llm_interface/: package.xml  setup.py
src/llm_interface/launch/: chat.launch.py
src/llm_interface/llm_interface/: chat.py  helpers.py
src/llm_interface/llm_interface/config/: landmarks.yaml
src/mmc_msgs/: CMakeLists.txt  package.xml
src/mmc_msgs/msg/: TaskRequest.msg
src/mobile_manipulation_coordinator/: package.xml  setup.cfg  setup.py
src/mobile_manipulation_coordinator/mobile_manipulation_coordinator/: coordinator.py  coordinator_v1.py
