<?xml version="1.0"?>
<package format="3">
  <name>jackal_perception</name>
  <version>0.0.1</version>
  <description>YOLO-based perception server for Jackal</description>

  <maintainer email="ektoras.sofianopoulos@gmail.com">ektoras</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>jackal_perception_interfaces</depend>

  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
